[package]
name = "fedi-ffi"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "fediffi"

# TODO: remove after uniffi upgraded
# https://github.com/mozilla/uniffi-rs/issues/2346
[lints.clippy]
empty-line-after-doc-comments = "allow"

[dependencies]
api-types = { workspace = true }
env = { workspace = true }
fedimint-core = { workspace = true }
fedimint-client = { workspace = true }
fedimint-mint-client = { workspace = true }
fedimint-ln-common = { workspace = true }
fedimint-wallet-client = { workspace = true }
fedi-social-client = { workspace = true }
stability-pool-client-old = { workspace = true }
stability-pool-client = { workspace = true }
bug-report = { workspace = true }
fedimint-derive-secret = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-bip39 = { workspace = true }
multispend = { path = "../../crates/multispend" }
sp-transfer = { path = "../../crates/sp-transfer" }

anyhow = { workspace = true }
bip39 = { version = "2.0.0", features = ["rand"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
bech32 = { workspace = true }
bitcoin = { workspace = true }
lazy_static = "1.4.0"
lightning-invoice = "0.33.0"
futures = "0.3"
tracing = { workspace = true }
tracing-serde = "0.2"
thiserror = "2.0.8"
hex = { workspace = true }
macro_rules_attribute = "0.1.3"
mime = "0.3.17"
nostr = { workspace = true }
ts-rs = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["time", "macros"] }
rolling-file = "0.2.0"
tracing-appender = "0.2.2"
matrix-sdk = { workspace = true, default-features = false, features = [
  "js",
  "indexeddb",
  "rustls-tls",
  "e2e-encryption",
] }
tempfile = "3.17.1"
federations = { workspace = true }
matrix = { workspace = true }
runtime = { workspace = true }
bridge = { workspace = true }
communities = { workspace = true }
rpc-types = { workspace = true }
either = "1.15.0"
nostril = { workspace = true }
imbl = { workspace = true, features = ["serde"] }
eyeball-im = { version = "0.8", features = ["serde"] }
base64 = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
fedimint-rocksdb = { workspace = true }
tokio-util = { version = "0.7.9", features = ["codec", "net"] }
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
uniffi = { version = "0.25.3" }
matrix-sdk = { workspace = true, default-features = false, features = [
  "sqlite",
] }
rusqlite = { version = "*" }

# we don't have an easy way to get static sqlite for android targets
# so we enable bundled feature when compiling for it
[target.'cfg(target_os = "android")'.dependencies]
rusqlite = { version = "*", features = ["bundled"] }

[build-dependencies]
uniffi = { version = "0.25.3", features = ["build"] }
fedimint-build = { workspace = true }

[dev-dependencies]
redb-storage = { workspace = true }
assert_matches = { workspace = true }
tempfile = "3.17.1"
mockito = "1.4.0"
clap = { workspace = true }
federations = { workspace = true, features = ["test-support"] }
devi = { workspace = true }
dvd-client = { workspace = true }

# FIXME: just put these above? or dev-dependencies
[target.'cfg(target_os = "macos")'.dependencies]
fedimint-logging = { workspace = true }
devimint = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
fedimint-logging = { workspace = true }
devimint = { workspace = true }
