[package]
name = "fedi-wasm"
version = "0.3.0"
edition = "2024"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_family = "wasm")'.dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
console_error_panic_hook = "0.1.7"
fedi-ffi = { workspace = true }
bridge = { workspace = true }
runtime = { workspace = true }
rpc-types = { workspace = true }
futures = { workspace = true }
gloo-utils = "0.2"
gloo-console = "0.3"
gloo-file = "0.3"
imbl.workspace = true
js-sys = "0.3.77"
rexie = "0.4.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter", "chrono"] }
tracing-wasm = "0.2.1"
web-sys = { version = "0.3", features = ["FileSystemSyncAccessHandle", "FileSystemReadWriteOptions"] }
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3.49"

fedimint-connectors = { workspace = true }
fedimint-core = { workspace = true }
fedimint-cursed-redb = { workspace = true }
