[package]
name = "api-types"
edition = "2021"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
anyhow.workspace = true
hex = { version = "0.4.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
