[package]
name = "bug-report"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
fedimint-core = { workspace = true }
fedimint-mint-client = { workspace = true }
fedimint-tbs = { workspace = true }
fedimint-derive-secret = { workspace = true }
futures = { workspace = true }
base64-serde = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
