[package]
name = "federations"
version = "0.3.0"
edition = "2024"

[features]
# to disable SP sweepers in tests
test-support = []

[dependencies]
api-types = { workspace = true }
fedimint-core = { workspace = true }
fedimint-client = { workspace = true }
fedimint-connectors = { workspace = true }
fedimint-client-module = { workspace = true }
fedimint-mint-client = { workspace = true }
fedimint-ln-client = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-ln-common = { workspace = true }
fedimint-wallet-client = { workspace = true }
fedimint-meta-client = { workspace = true }
fedi-social-client = { workspace = true }
stability-pool-client-old = { workspace = true }
stability-pool-client = { workspace = true }
bug-report = { workspace = true }
device-registration = { workspace = true }
matrix = { workspace = true }
fedimint-derive-secret = { workspace = true }
fedimint-bip39 = { workspace = true }

anyhow = { workspace = true }
bip39 = { version = "2.0.0", features = ["rand"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
bitcoin = { workspace = true }
lightning-invoice = "0.33.0"
futures = "0.3"
tracing = { workspace = true }
thiserror = "2.0.8"
assert_matches = { workspace = true }
hex = { workspace = true }
mime = "0.3.17"
ts-rs = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["time", "macros"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
url = "2.3.1"
reqwest = { workspace = true }
matrix-sdk-ui = { workspace = true, default-features = false }
matrix-sdk = { workspace = true, default-features = false, features = [
  "js",
  "indexeddb",
  "rustls-tls",
  "e2e-encryption",
] }
imbl = { workspace = true, features = ["serde"] }
async-recursion = "1.1.0"
async-stream.workspace = true
runtime = { workspace = true }
rpc-types = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
matrix-sdk = { workspace = true, default-features = false, features = [
  "sqlite",
] }
rusqlite = { version = "*" }
aws-lc-sys = { version = "0.32", features = ["bindgen"] }

# we don't have an easy way to get static sqlite for android targets
# so we enable bundled feature when compiling for it
[target.'cfg(target_os = "android")'.dependencies]
rusqlite = { version = "*", features = ["bundled"] }

[build-dependencies]
fedimint-build = { workspace = true }
