[package]
description = "fedimint-cursed-redb provides a hybrid memory/redb database implementation for Fedimint."
edition = "2024"
name = "fedimint-cursed-redb"
version = "0.1.0"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_cursed_redb"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }
futures = { workspace = true }
imbl = "5"
redb = "2.2.0"
tracing = { workspace = true }
web-sys = { version = "0.3", features = ["FileSystemSyncAccessHandle", "FileSystemReadWriteOptions"] }
gloo-utils = "0.2"

[dev-dependencies]
tempfile = "3.17.1"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
