[package]
name = "multispend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
fedimint-core = { workspace = true }
futures = { workspace = true }
matrix-sdk = { workspace = true }
matrix-sdk-base = { workspace = true }
rand = { workspace = true }
rpc-types = { path = "../rpc-types" }
runtime = { path = "../runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
stability-pool-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
[dev-dependencies]
assert_matches = { workspace = true }
