[package]
name = "nostril"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bech32 = { workspace = true }
fedimint-aead = { workspace = true }
fedimint-derive-secret = { workspace = true }
futures = "0.3"
itertools = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time", "macros"] }
rand = { workspace = true }
reqwest = { workspace = true }
runtime = { workspace = true }
rpc-types = { workspace = true }
nostr-sdk = { workspace = true }
