[package]
name = "remote-server"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.7", features = ["ws"] }
bridge = { workspace = true }
clap = { workspace = true }
devi = { workspace = true }
devimint = { workspace = true }
fedi-ffi = { workspace = true }
redb-storage = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-core = { workspace = true }
futures = "0.3"
listenfd = "1.0"
rpc-types = { workspace = true }
runtime = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full", "tracing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
