[package]
name = "rpc-types"
version = "0.3.0"
edition = "2024"

[features]

[dependencies]
fedimint-core = { workspace = true }
fedimint-mint-client = { workspace = true }
fedimint-ln-client = { workspace = true }
fedimint-wallet-client = { workspace = true }
fedi-social-client = { workspace = true }
stability-pool-client-old = { workspace = true }
stability-pool-client = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
bitcoin = { workspace = true }
lightning-invoice = "0.33.0"
tracing = { workspace = true }
thiserror = "2.0.8"
ts-rs = { workspace = true }
url = "2.3.1"
matrix-sdk-ui = { workspace = true, default-features = false }
matrix-sdk = { workspace = true, default-features = false, features = [
  "js",
  "indexeddb",
  "rustls-tls",
  "e2e-encryption",
] }
nostr-sdk = { workspace = true }
ring = { workspace = true }
runtime = { workspace = true }
bech32 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
ring = { workspace = true, features = ["wasm32_unknown_unknown_js"] }

[build-dependencies]
fedimint-build = { workspace = true }
