[package]
name = "stability-pool-client"
version = "0.3.0"
authors = ["The Stability Pool Developers"]
description = "stability pool module for fedimint"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1"
fedimint-core = { workspace = true }
fedimint-client = { workspace = true }
futures = "0.3.24"
serde = { version = "1.0.149", features = [ "derive" ] }
strum = "0.24"
strum_macros = "0.24"
bitcoin = { version = "0.29.2", features = [ "rand", "serde"] }
tracing ="0.1.37"
secp256k1-zkp = { version = "0.7.0", features = ["serde", "bitcoin_hashes" ] }
serde_json = { version = "1" }
erased-serde = "0.4"
stability-pool-common = { path = "../stability-pool-common" }
rand = "0.8"
async-stream = "0.3.5"
tokio = "1.23"
