[package]
name = "devi"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
devimint = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-portalloc = { workspace = true }
runtime = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
