[package]
name = "dvd-server"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
clap = { workspace = true }
devi = { workspace = true }
devimint = { workspace = true }
dvd-client = { workspace = true }
fedimint-core = { workspace = true }
fedimint-logging = { workspace = true }
listenfd = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = { workspace = true }
