[package]
name = "fedi-fedimint-cli"
version = "0.3.0"
authors = ["The Fedi Developers"]
edition = "2024"
description = "fedimintd with custom fedi modules"

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"


[dependencies]
anyhow = { workspace = true }
fedimint-cli = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
stability-pool-client-old = { workspace = true }
stability-pool-client = { workspace = true }
fedi-social-client = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }
