[package]
name = "fedi-social-client"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedi-social is a Fedi's social backup&recovery module."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fedi_social_client"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true }
erased-serde = { workspace = true }
futures = { workspace = true }
hex = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
fedimint-aead = { workspace = true }
fedimint-client = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-core = { workspace = true }
fedimint-derive-secret = { workspace = true }
fedimint_threshold_crypto = { workspace = true }
fedi-social-common = { path = "../common" }
rand = { workspace = true }
ring = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
impl-tools = { workspace = true }
